--- a/main.html
+++ b/main.html
@@ -9,14 +9,14 @@
 
 <body>
 	<div id="carouselExampleControls" id="myCarousel" class="carousel slide" data-bs-ride="carousel">
-  <div class="carousel-inner" id="myCarousel">
+  <div class="carousel-inner slide" id="myCarousel">
     <div class="first-slide carousel-item active">
       <img src="https://images.unsplash.com/photo-1604537529428-15bcbeecfe4d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=869&q=80" class="d-block w-100" alt="...">
     </div>
     <div class="second-slide carousel-item">
       <img src="https://images.unsplash.com/32/Mc8kW4x9Q3aRR3RkP5Im_IMG_4417.jpg?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8YmFja2dyb3VuZHxlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=600&q=60" class="d-block w-100" alt="...">
     </div>
-    <div class="third-slide carousel-item active">
+    <div class="third-slide carousel-item">
       <img src="https://images.unsplash.com/photo-1422246719650-cb30d19825e3?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDR8fHxlbnwwfHx8fHw%3D&auto=format&fit=crop&w=600&q=60" class="d-block w-100" alt="...">
     </div>
 	   <div class="fourth-slide carousel-item">
@@ -26,12 +26,12 @@
       <img src="https://images.unsplash.com/photo-1484553255294-313b931acd27?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDEzfHx8ZW58MHx8fHx8&auto=format&fit=crop&w=600&q=60" class="d-block w-100" alt="...">
     </div>
   </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon glyphicon-chevron-left" aria-hidden="true"></span>
+  <button class="carousel-control-prev glyphicon-chevron-left" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="visually-hidden left">Previous</span>
   </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-    <span class="carousel-control-next-icon glyphicon-chevron-right" aria-hidden="true"></span>
+  <button class="carousel-control-next glyphicon-chevron-right" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="visually-hidden right">Next</span>
   </button>
 </div>
