--- a/main.html
+++ b/main.html
@@ -1,45 +1,67 @@
 <!DOCTYPE html>
-
+ 
 <html>
-
+ 
 <head>
 	<link rel="stylesheet" href="styles.css">
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+ 
+	<!-- Bootstrap CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 </head>
-
+ 
 <body>
-	<div id="carouselExampleControls" id="myCarousel" class="carousel slide" data-bs-ride="carousel">
-  <div class="carousel-inner slide" id="myCarousel">
-    <div class="first-slide carousel-item active">
-      <img src="https://images.unsplash.com/photo-1604537529428-15bcbeecfe4d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=869&q=80" class="d-block w-100" alt="...">
-    </div>
-    <div class="second-slide carousel-item">
-      <img src="https://images.unsplash.com/32/Mc8kW4x9Q3aRR3RkP5Im_IMG_4417.jpg?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8YmFja2dyb3VuZHxlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=600&q=60" class="d-block w-100" alt="...">
-    </div>
-    <div class="third-slide carousel-item">
-      <img src="https://images.unsplash.com/photo-1422246719650-cb30d19825e3?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDR8fHxlbnwwfHx8fHw%3D&auto=format&fit=crop&w=600&q=60" class="d-block w-100" alt="...">
-    </div>
-	   <div class="fourth-slide carousel-item">
-      <img src="https://images.unsplash.com/photo-1542738660-598c8cc837a6?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDl8fHxlbnwwfHx8fHw%3D&auto=format&fit=crop&w=600&q=60" class="d-block w-100" alt="...">
-    </div>
-	   <div class="fifth-slide carousel-item">
-      <img src="https://images.unsplash.com/photo-1484553255294-313b931acd27?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDEzfHx8ZW58MHx8fHx8&auto=format&fit=crop&w=600&q=60" class="d-block w-100" alt="...">
-    </div>
-  </div>
-  <button class="carousel-control-prev glyphicon-chevron-left" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden left">Previous</span>
-  </button>
-  <button class="carousel-control-next glyphicon-chevron-right" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden right">Next</span>
-  </button>
-</div>
 	<!-- the entire body must be written by student -->
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+ 
+	<div id="myCarousel" class="carousel slide" data-ride="carousel">
+		<!-- Indicators -->
+		<ol class="carousel-indicators">
+		  <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+		  <li data-target="#myCarousel" data-slide-to="1"></li>
+		  <li data-target="#myCarousel" data-slide-to="2"></li>
+		</ol>
+	  
+		<!-- Wrapper for slides -->
+		<div class="carousel-inner">
+ 
+		  <div class="item active first-slide">
+			<img src="https://images.pexels.com/photos/531321/pexels-photo-531321.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Los Angeles">
+		  </div>
+	  
+		  <div class="item second-slide">
+			<img src="https://images.pexels.com/photos/2582510/pexels-photo-2582510.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Chicago">
+		  </div>
+	  
+		  <div class="item active third-slide">
+			<img src="https://images.pexels.com/photos/2582546/pexels-photo-2582546.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="New York">
+		  </div>
+ 
+		  <div class="item fourth-slide">
+			<img src="https://images.pexels.com/photos/2582510/pexels-photo-2582510.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Chicago">
+		  </div>
+ 
+		  <div class="item fifth-slide">
+			<img src="https://images.pexels.com/photos/531321/pexels-photo-531321.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Los Angeles">
+		  </div>
+		</div>
+	  
+		<!-- Left and right controls -->
+		<a class="left carousel-control" href="#myCarousel" data-slide="prev">
+		  <span class="glyphicon glyphicon-chevron-left"></span>
+		  <span class="sr-only">Previous</span>
+		</a>
+		<a class="right carousel-control" href="#myCarousel" data-slide="next">
+		  <span class="glyphicon glyphicon-chevron-right"></span>
+		  <span class="sr-only">Next</span>
+		</a>
+	  </div>
+ 
+	<!-- Bootstrap Bundle with Popper -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="./script.js">
 </script>
-
+ 
 </body>
-
+ 
 </html>
+ 
